[tool.poetry]
name = "vit-pytorch-1"
version = "0.1.0"
description = ""
authors = ["babaamata <sakakibaraki@fuji.waseda.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.12.0"
numpy = "^1.23.1"
tqdm = "^4.64.0"
tensorboard = "^2.9.1"
ml-collections = "^0.1.1"
scipy = "^1.8.1"
torchvision = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
